tests/errors/err_str_to_int_param.mix
// ERROR: expected int, got str
add(a: int, b: int) -> int
    a + b

main()
    print(add("x", "y"))
